--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           name: v${{ env.MOD_VERSION }}
+          tag_name: v${{ env.MOD_VERSION }}
           target_commitish: ${{ github.sha }}
           draft: true
           files: ${{ env.MOD_ID }}.zip
